fix: align search bar and pagination, fix broken images in AddMember modal

--- a/src/screens/AdminPortal/OrganizationPeople/addMember/AddMember.module.css
+++ b/src/screens/AdminPortal/OrganizationPeople/addMember/AddMember.module.css
@@ -52,14 +52,6 @@
   border: 0;
 }
 
-.TableImage {
-  object-fit: cover;
-  margin-right: var(--space-2);
-  width: var(--space-10);
-  height: var(--space-10);
-  border-radius: var(--radius-full);
-}
-
 .eventsAttended,
 .membername {
   color: var(--color-blue-200);
